# biased

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/src/api/: cli.py  config.py  main.py  models.py
apps/api/src/api/services/: agent_orchestration.py  demo_data.py  mcp_rpc.py
apps/web/: Dockerfile  README.md  drizzle.config.ts  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  manifest.ts
apps/web/app/(app)/: layout.tsx
apps/web/components/: action-center-manager.tsx  app-shell.tsx  auth-form.tsx  create-workspace-form.tsx  documents-workspace.tsx  forecast-lab.tsx  import-ledger.tsx  import-uploader.tsx  investigation-console.tsx  margin-chart.tsx  model-provider-settings.tsx  quick-add-entries.tsx  recurring-obligations-manager.tsx
apps/web/lib/: api.ts  auth-client.ts  auth.ts  db.ts  env.ts  fallback-data.ts  rbac.ts  schema.ts  session.ts
data/demo/: README.md  anonymize_fixtures.py  pharmacy-briefing.json  pharmacy-dashboard.json  pharmacy-documents.json  pharmacy-expenses.csv  pharmacy-investigation.json  pharmacy-products.csv  pharmacy-purchases.csv  pharmacy-recurring-obligations.csv  pharmacy-sales.csv
docs/: architecture.md  deployment.md  feature-evidence.md  roadmap.md  showcase.md
infra/: docker-compose.yml
(+12 files in other folders)
