[project]
name = "api"
version = "1.0.0"
description = "FastAPI analytics and AI orchestration service for B.I.A.S.E.D."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.120.0",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "duckdb>=1.4.2",
    "polars>=1.34.0",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3.2.12",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
agentic = [
    "langchain-core>=0.3.0",
    "langgraph>=0.3.0",
]
mcp = [
    "mcp>=1.0.0",
]

[project.scripts]
api = "api.main:main"
api-data = "api.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
